# opendeepbot

./: .env.example  .gitignore  AGENTS.md  AGENTS_zh.md  DEVELOPMENT.md  Dockerfile  INTEGRATION_GUIDE.md  NANOBOT_INTEGRATION_ANALYSIS.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  run.py
config/: README.md  agents.yaml  claude_config.yaml  deeptutor.yaml.example  embedding.yaml  hermes.yaml.bak  interrogation_config.yaml  llm.yaml  main.yaml  main.yaml.bak  mirofish_config.json  nanobot.yaml  search.yaml  supermemory.yaml  tools.yaml  trae_agent.yaml  unified_config.development.yaml  unified_config.production.yaml  unified_config.yaml  validate_config.py  vector_db.yaml  weknora.yaml
deeptutor/: __main__.py
deeptutor_cli/: main.py  model_cmd.py
examples/: agentscope_examples.py  all_examples.py  channels_demo.py  deerflow_basic.py  deerflow_research.py  deerflow_subagent.py  full_example.py  interrogation_pipeline_integration.py  interrogation_skills_demo.py  knowledge_base_advanced_example.py  knowledge_base_complete_example.py  knowledge_base_demo.py  knowledge_base_example.py  mcp_chrome_example.py  mcp_example.py  metagpt_team_demo.py  nanobot_examples.py  opencli_adapter.py  opencli_basic.py  opencli_electron.py  openharness_pipeline_example.py  openharness_quickstart.py  quick_start.py  run_demo.ps1  sdk_demo.py  simple_agent.py  skills_demo.py  smart_tutor_demo.py  supermemory_usage_examples.py  web_access_browser.py  web_access_experience.py  web_access_parallel.py  web_access_search.py
requirements/: cli.txt  server.txt  tutorbot.txt
scripts/: start_channels.py
tests/: __init__.py  conftest.py  repro_assistant_chat.py  test_browser_tool.py  test_channels.py  test_clawx_integration.py  test_config.py  test_mcp.py  (+12 more)
(+130 files in other folders)
