[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deeptutor"
version = "0.1.0"
description = "DeepTutor - Multi-platform AI Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DeepTutor Team"}
]
keywords = ["ai", "assistant", "llm", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "openai>=1.30.0",
    "tiktoken>=0.12.0",
    "aiohttp>=3.9.4",
    "httpx>=0.27.0",
    "requests>=2.32.2",
    "nest_asyncio>=1.5.8",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
discord = ["discord.py>=2.0"]
slack = ["slack-bolt>=1.0"]
email = ["aiosmtplib>=2.0", "aioimaplib>=0.9"]
knowledge = ["hyperextract>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
]
all = [
    "python-telegram-bot>=20.0",
    "discord.py>=2.0",
    "slack-bolt>=1.0",
    "aiosmtplib>=2.0",
    "aioimaplib>=0.9",
    "hyperextract>=0.1.0",
]

[project.scripts]
deeptutor = "deeptutor.cli.main:app"

[project.urls]
Homepage = "https://github.com/17625398/opendeepbot"
Issues = "https://github.com/17625398/opendeepbot/issues"
